--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,46 @@
-bin/
-obj/
-TestResult.xml
+# Misc
+.DS_Store
+Thumbs.db
+
+# Autosave files
 *~
+
+# build
+[Oo]bj/
+[Bb]in/
+packages/
+TestResults/
+TestResult.xml
 coverageResults.txt
+coverageKnowns
+
+# globs
+Makefile.in
+*.DS_Store
+*.sln.cache
+*.suo
+*.cache
+*.pidb
+*.userprefs
+*.usertasks
+config.log
+config.make
+config.status
+aclocal.m4
+install-sh
+autom4te.cache/
+*.user
+*.tar.gz
+tarballs/
+test-results/
+
+# Mac bundle stuff
+*.dmg
+*.app
+
+# resharper
+*_Resharper.*
+*.Resharper
+
+# dotCover
+*.dotCover
