--- a/Gaillard.SharpCover.Tests/TestTarget.csproj
+++ b/Gaillard.SharpCover.Tests/TestTarget.csproj
@@ -4,6 +4,7 @@
     <AssemblyName>TestTarget</AssemblyName>
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
+	<DebugType>full</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
