--- a/Gaillard.SharpCover/Counter.csproj
+++ b/Gaillard.SharpCover/Counter.csproj
@@ -13,8 +13,8 @@
     <OutputPath>bin\Debug</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release</OutputPath>
   </PropertyGroup>
   <ItemGroup>
