--- a/travisCoverageConfig.json
+++ b/travisCoverageConfig.json
@@ -1,10 +1,10 @@
 {
     "assemblies": [
-        "Gaillard.SharpCover.Tests/bin/Debug/SharpCover.exe"
+        "SharpCoverPlus.Tests/bin/Debug/SharpCoverPlus.exe"
     ],
     "methodBodyExcludes": [
         {
-            "method": "System.Void Gaillard.SharpCover.Program::Instrument(Mono.Cecil.Cil.Instruction,Mono.Cecil.MethodReference,Mono.Cecil.MethodDefinition,Mono.Cecil.Cil.ILProcessor,System.String,Gaillard.SharpCover.Program/InstrumentConfig,System.IO.TextWriter,System.Int32&)",
+            "method": "System.Void Didstopia.SharpCoverPlus.Program::Instrument(Mono.Cecil.Cil.Instruction,Mono.Cecil.MethodReference,Mono.Cecil.MethodDefinition,Mono.Cecil.Cil.ILProcessor,System.String,Didstopia.SharpCoverPlus.Program/InstrumentConfig,System.IO.TextWriter,System.Int32&)",
             "lines": ["handler.FilterStart = pathParamLoadInstruction;"]
         }
     ]
