--- a/SharpCoverPlus.Tests/SharpCoverPlus.Tests.TestTarget.csproj
+++ b/SharpCoverPlus.Tests/SharpCoverPlus.Tests.TestTarget.csproj
@@ -1,12 +1,14 @@
 <Project ToolsVersion="4.0" DefaultTargets="Rebuild" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <AssemblyName>TestTarget</AssemblyName>
+    <AssemblyName>SharpCoverPlus.Tests.TestTarget</AssemblyName>
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
 	<DebugType>full</DebugType>
 	<ProjectGuid>{305F3408-2B08-4837-BC62-8E4490969C39}</ProjectGuid>
 	<TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+	<ReleaseVersion>0.0.1</ReleaseVersion>
+	<RootNamespace>Didstopia.SharpCoverPlus.Tests</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug</OutputPath>
