--- a/SharpCoverPlus.Tests/SharpCoverPlus.Tests.csproj
+++ b/SharpCoverPlus.Tests/SharpCoverPlus.Tests.csproj
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Rebuild" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <AssemblyName>SharpCover</AssemblyName>
+    <OutputType>Library</OutputType>
+    <AssemblyName>SharpCoverPlus.Tests</AssemblyName>
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
-    <ProjectGuid>{F1E7F0B8-BEC3-482B-BE05-92470FFCB93E}</ProjectGuid>
+    <ProjectGuid>{DF8443B6-5F12-4E44-AF13-0EBFF5120547}</ProjectGuid>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <ReleaseVersion>0.0.1</ReleaseVersion>
+    <RootNamespace>Didstopia.SharpCoverPlus.Tests</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -18,13 +19,10 @@
     <OutputPath>bin\Release</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="Counter.csproj">
-      <Project>{2F649F44-81FE-4D41-B52C-55513D5D5380}</Project>
-      <Name>Counter</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Cecil">
       <HintPath>..\packages\Mono.Cecil.0.10.0-beta6\lib\net40\Mono.Cecil.dll</HintPath>
     </Reference>
@@ -37,15 +35,25 @@
     <Reference Include="Mono.Cecil.Rocks">
       <HintPath>..\packages\Mono.Cecil.0.10.0-beta6\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.3.7.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="ProgramTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <ProjectReference Include="SharpCoverPlus.Tests.TestTarget.csproj">
+      <Project>{305F3408-2B08-4837-BC62-8E4490969C39}</Project>
+      <Name>SharpCoverPlus.Tests.TestTarget</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SharpCoverPlus\SharpCoverPlus.csproj">
+      <Project>{F1E7F0B8-BEC3-482B-BE05-92470FFCB93E}</Project>
+      <Name>SharpCoverPlus</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)/Microsoft.CSharp.targets" />
 </Project>
