--- a/SharpCoverPlus.Tests/packages.config
+++ b/SharpCoverPlus.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="Mono.Cecil" version="0.10.0-beta6" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
+  <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net462" />
 </packages>
