--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,7 @@ env:
 
 # Build script
 script:
-  - msbuild /p:Configuration=${MSBUILD_CONFIG} /t:Restore,Rebuild && \
-    mono SharpCoverPlus/bin/${MSBUILD_CONFIG}/SharpCoverPlus.exe instrument travisCoverageConfig.json
+  - nuget restore
   - msbuild /p:Configuration=${MSBUILD_CONFIG} /t:Restore,Rebuild && \
     mono SharpCoverPlus/bin/${MSBUILD_CONFIG}/SharpCoverPlus.exe instrument travisCoverageConfig.json
 
