--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,9 @@ env:
 # Build script
 script:
   - nuget restore
-  - msbuild /p:Configuration=${MSBUILD_CONFIG} /t:Restore,Rebuild && \
-    mono SharpCoverPlus/bin/${MSBUILD_CONFIG}/SharpCoverPlus.exe instrument travisCoverageConfig.json
+  - msbuild /p:Configuration=${MSBUILD_CONFIG} /t:Restore,Rebuild
+  - find / -f -name mono
+  - mono SharpCoverPlus/bin/${MSBUILD_CONFIG}/SharpCoverPlus.exe instrument travisCoverageConfig.json
 
 # Only build the master branch
 branches:
