--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ env:
 script:
   - nuget restore
   - msbuild /p:Configuration=${MSBUILD_CONFIG} /t:Restore,Rebuild
-  - find / -f -name mono
+  - find / -type -f -executable -name mono
   - mono SharpCoverPlus/bin/${MSBUILD_CONFIG}/SharpCoverPlus.exe instrument travisCoverageConfig.json
 
 # Only build the master branch
