--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ env:
 script:
   - nuget restore
   - msbuild /p:Configuration=${MSBUILD_CONFIG} /t:Restore,Rebuild
-  - /usr/share/cli-common/runtimes.d/mono SharpCoverPlus/bin/${MSBUILD_CONFIG}/SharpCoverPlus.exe instrument travisCoverageConfig.json
+  ## FIXME: For some reason this image doesn't have a valid/good mono runtime, not sure why
+  #- /usr/share/cli-common/runtimes.d/mono SharpCoverPlus/bin/${MSBUILD_CONFIG}/SharpCoverPlus.exe instrument travisCoverageConfig.json
 
 # Only build the master branch
 branches:
